# telegram-bot

./: .gitignore  README.md  bot.py  pyproject.toml
csu_class/: __init__.py  config.py  data_source.py
